--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   "dependencies": {
     "@material-ui/core": "4.11.2",
     "@material-ui/styles": "4.11.2",
+    "@react-firebase/auth": "0.2.10",
+    "firebase": "5.4.1",
+    "lodash": "4.17.20",
     "react": "17.0.0",
     "react-dom": "17.0.0",
+    "react-router": "5.2.0",
+    "react-router-dom": "5.2.0",
     "react-scripts": "3.4.3"
   },
   "devDependencies": {
