--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "main": "src/index.js",
   "dependencies": {
     "@material-ui/core": "4.11.2",
+    "@material-ui/icons": "4.11.2",
     "@material-ui/styles": "4.11.2",
     "@react-firebase/auth": "0.2.10",
     "firebase": "5.4.1",
     "lodash": "4.17.20",
+    "material-ui-image": "3.3.1",
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-router": "5.2.0",
